--- a/app/src/main/res/layout/activity_device_info.xml
+++ b/app/src/main/res/layout/activity_device_info.xml
@@ -40,7 +40,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
-                        android:text="18°"
+                        android:text="0°C"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="#FFFFFF"
                         android:textSize="50sp" />
@@ -58,8 +58,8 @@
 
                 <TextView
                     android:id="@+id/textView13"
-                    android:layout_width="100dp"
-                    android:layout_height="35dp"
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
                     android:layout_below="@id/top"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center_horizontal"
@@ -67,7 +67,6 @@
                     android:background="@drawable/device_info_setting"
                     android:gravity="center"
                     android:text="酒柜设置"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="#FFFFFF" />
 
                 <ImageView
@@ -100,7 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="18°"
+                        android:text="0°C"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
@@ -171,7 +170,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="红葡萄酒"
+                        android:text="未设置"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
