--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue">#030cfc</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="C7C7C7">#C7C7C7</color>
 </resources>
