品酒活动评论部分 1，表情处理 2，图片七牛云处理 3，评论删除

--- a/app/src/main/res/layout/activity_party_detail.xml
+++ b/app/src/main/res/layout/activity_party_detail.xml
@@ -11,8 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical" >
+        android:orientation="vertical">
+
         <include layout="@layout/include_comment_bottom_bar_party" />
+
+        <include
+            layout="@layout/bottom_comment_layout"
+            android:visibility="gone" />
 
     </LinearLayout>
 
@@ -22,10 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/ll_bottom"
         android:layout_alignParentTop="true"
-        android:divider="@null"
         android:background="#FFFFFF"
-        android:listSelector="@null" >
-    </com.sicao.smartwine.widget.P2RefreshListView>
+        android:divider="@null"
+        android:listSelector="@null"></com.sicao.smartwine.widget.P2RefreshListView>
 
     <TextView
         android:id="@+id/tv_net_bade"
