品酒活动报名参加支付宝支付OK 微信支付有问题，待解决

--- a/app/src/main/res/layout/activity_party_sign_up.xml
+++ b/app/src/main/res/layout/activity_party_sign_up.xml
@@ -3,10 +3,288 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sicao.smartwine.party.PartySignUpActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="#FFFFFF"
+        android:orientation="vertical" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="手机号码:"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@null"
+                android:ems="10"
+                android:inputType="phone"
+                android:maxLength="11"
+                android:hint="请输入联系号码"
+                android:textColor="#646464"
+                android:textSize="16sp" >
+            </EditText>
+        </LinearLayout>
+
+       <ImageView
+           android:layout_width="match_parent"
+           android:layout_height="1dp"
+           android:src="@drawable/line"
+           />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center|left"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="报名人数:"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/join_party_add"
+                android:clickable="true"
+                android:gravity="center"
+                android:onClick="onClick"
+                android:text="－"
+                android:textSize="14dp"
+                android:textColor="#000000" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/textView2"
+                android:layout_width="80px"
+                android:layout_height="60px"
+                android:background="@drawable/join_party_add"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="#000000" />
+            <EditText
+                android:id="@+id/ev_editview"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:background="@drawable/join_party_add"
+                android:gravity="center"
+                android:text="1"
+                android:textSize="14dp"
+                android:inputType="number"
+                android:textColor="#000000"
+                />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="40dp"
+                android:layout_height="30dp"
+                android:background="@drawable/join_party_add"
+                android:clickable="true"
+                android:gravity="center"
+                android:onClick="onClick"
+                android:text="＋"
+                android:textSize="14dp"
+                android:textColor="#000000" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/line"
+            />
+        <LinearLayout
+            android:id="@+id/ll_select_pay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="选择支付方式"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/line"
+            />
+
+        <RelativeLayout
+            android:id="@+id/zhifubao"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="支付宝支付"
+                android:drawablePadding="5dp"
+                android:gravity="center"
+                android:drawableLeft="@drawable/apliy_pay_icon"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/zhifubao_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/pay_select" />
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/line"
+            />
+
+        <RelativeLayout
+            android:id="@+id/weixin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:padding="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="微信支付"
+                android:drawablePadding="5dp"
+                android:gravity="center"
+                android:drawableLeft="@drawable/wx_pay_icon"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:id="@+id/weixin_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/pay_default" />
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:src="@drawable/line"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:paddingRight="0dp"
+            android:background="@color/baseBackgroud"
+            android:paddingBottom="20dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/iv_order_iv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:padding="5dp"
+                android:onClick="onClick"
+                android:clickable="true"
+                android:src="@drawable/expert_treaty_p" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="同意葡萄集"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_order_xieyi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:text="支付协议"
+                android:textColor="#ad1c79"
+                android:textSize="12sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#FFFFFF"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:id="@+id/ll_money"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="总计:" />
+
+            <TextView
+                android:id="@+id/money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:textColor="#E30000" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="元" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/join_btn"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/baseColor"
+            android:clickable="true"
+            android:onClick="onClick"
+            android:gravity="center"
+            android:text="立即报名"
+            android:padding="10dp"
+            android:textColor="@color/write" />
+    </LinearLayout>
 </RelativeLayout>
