添加商品详情处的酒款点评部分

--- a/app/src/main/res/layout/activity_shop_detail.xml
+++ b/app/src/main/res/layout/activity_shop_detail.xml
@@ -280,6 +280,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#FFFFFF"
+                android:visibility="gone"
                 android:listSelector="@null"></com.sicao.smartwine.widget.NoScrollListView>
         </LinearLayout>
     </ScrollView>
