--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -47,6 +47,17 @@
                 android:layout_margin="15dp"
                 app:border_color="#FFFFFF"
                 app:border_width="1dp" />
+            <TextView
+                android:id="@+id/right_text"
+                android:textColor="@color/write"
+                android:text="发表"
+                android:visibility="gone"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
 
         <FrameLayout
