--- a/app/src/main/res/layout/wine_library_list.xml
+++ b/app/src/main/res/layout/wine_library_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -25,7 +26,7 @@
         android:paddingRight="10dp"
         android:paddingTop="6dp">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_mycellarimage"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -35,8 +36,7 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_launcher" />
+            fresco:placeholderImage="@drawable/ic_launcher" />
 
         <ImageView
             android:id="@+id/img"
