--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/baseBackgroud"
+
     tools:context="com.sicao.smartwine.BaseActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:orientation="vertical">
 
         <RelativeLayout
@@ -37,7 +39,7 @@
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
 
-            <com.sicao.smartwine.widget.CircleImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -45,8 +47,10 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="right"
                 android:layout_margin="15dp"
-                app:border_color="#FFFFFF"
-                app:border_width="1dp" />
+                android:visibility="gone"
+                fresco:roundAsCircle="true"
+                fresco:placeholderImage="@drawable/ic_launcher"
+                 />
             <TextView
                 android:id="@+id/right_text"
                 android:textColor="@color/write"
