--- a/app/src/main/res/layout/activity_create_order.xml
+++ b/app/src/main/res/layout/activity_create_order.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.sicao.smartwine.shop.CreateOrderActivity">
@@ -179,7 +180,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/write" >
 
-                <ImageView
+                <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/imageView1"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
