--- a/app/src/main/res/layout/freedrink_info_wine_info.xml
+++ b/app/src/main/res/layout/freedrink_info_wine_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -15,7 +16,7 @@
         android:paddingRight="10dp"
         android:paddingTop="6dp" >
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/iv_mycellarimage"
             android:layout_width="80dp"
             android:layout_height="80dp"
