--- a/app/src/main/res/layout/support_user_item.xml
+++ b/app/src/main/res/layout/support_user_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent" >
 
-    <com.sicao.smartwine.widget.CircleImageView
-        xmlns:CircleImageView="http://schemas.android.com/apk/res/com.sicao.smartwine"
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/circleImageView1"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        CircleImageView:border_width="1dp"
-        CircleImageView:border_color="@color/photo_border_color"
-        android:src="@drawable/ic_launcher" />
+        fresco:roundAsCircle="true"
+        fresco:placeholderImage="@drawable/ic_launcher" />
 
 </RelativeLayout>
