--- a/app/src/main/res/layout/wine_library_index_list_gridview_item.xml
+++ b/app/src/main/res/layout/wine_library_index_list_gridview_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent" >
 
     <RelativeLayout
@@ -18,12 +19,11 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp" >
 
-            <ImageView
+            <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/imageView1"
                 android:layout_width="90px"
                 android:layout_height="90px"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_launcher" />
+                fresco:placeholderImage="@drawable/ic_launcher" />
         </LinearLayout>
 
         <LinearLayout
