--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     tools:context="com.sicao.smartwine.user.UserInfoActivity">
 
     <RelativeLayout
@@ -37,7 +38,7 @@
             android:drawableRight="@drawable/rihgt"
             android:onClick="onClick" />
 
-        <com.sicao.smartwine.widget.CircleImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/avatar"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -50,7 +51,9 @@
             android:layout_toStartOf="@id/test5"
             android:clickable="true"
             android:onClick="onClick"
-            android:src="@drawable/ic_qq" />
+            fresco:roundAsCircle="true"
+            fresco:placeholderImage="@drawable/ic_launcher"
+            />
     </RelativeLayout>
 
     <ImageView
