--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="C7C7C7">#C7C7C7</color>
     <color name="color_333">#333333</color>
     <color name="photo_border_color">#f1f1f1</color>
+    <color name="dcdcdc">#dcdcdc</color>
 </resources>
