--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -11,8 +11,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:background="@color/baseColor"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,11 +26,11 @@
             <ImageView
                 android:id="@+id/left_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:padding="20dp"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_back_new" />
 
             <TextView
                 android:id="@+id/toolbar_title"
