--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/baseColor"
+    android:background="@color/write"
     android:orientation="vertical"
     tools:context=".device.ConfigActivity">
 
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_margin="15dp"
-        android:src="@drawable/wifi_icon" />
+        android:src="@drawable/ic_connecting" />
 
     <TextView
         android:id="@+id/textView7"
@@ -22,7 +22,8 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/connect_wifi"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
+        android:textColor="@color/d3d3d3d"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/textView8"
@@ -34,73 +35,85 @@
         android:padding="10dp"
         android:text="选择一个可用的WLAN,让设备和您的手机接入同一个网络"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
+        android:textSize="14sp"
+        android:lineSpacingExtra="5dp"
+        android:textColor="@color/d3d3d3d" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/add_device_edit_bg">
+        android:background="@drawable/wifi_connect_edit_top">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/editText1"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:onClick="onClick"
+                android:text="选择wifi账号"
+                android:textColor="@color/d3d3d3d"
+                android:layout_marginLeft="10dp"
+                android:textSize="14sp"
+                android:textColorHint="#FFFFFF"></TextView>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_arrow" />
+        </RelativeLayout>
         <TextView
-            android:id="@+id/editText1"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:clickable="true"
-            android:gravity="center_vertical"
-            android:onClick="onClick"
-            android:text="SSID:"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"></TextView>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/add_device_toright" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/add_device_edit_bg">
-
-        <ImageView
-            android:id="@+id/open_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/add_device_eya" />
-
-        <EditText
-            android:id="@+id/editText2"
+            android:layout_height="1px"
+            android:background="@color/b3b3b3"/>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/open_pwd"
-            android:layout_toStartOf="@id/open_pwd"
-            android:background="@null"
-            android:ems="10"
-            android:gravity="center_vertical"
-            android:hint="密码:"
-            android:password="true"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF" />
-    </RelativeLayout>
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/open_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
+                android:padding="5dp"
+                android:src="@drawable/ic_viewed_gray" />
+
+            <EditText
+                android:id="@+id/editText2"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/open_pwd"
+                android:layout_toStartOf="@id/open_pwd"
+                android:background="@null"
+                android:ems="10"
+                android:gravity="center_vertical"
+                android:hint="请输入wifi密码"
+                android:layout_marginLeft="10dp"
+                android:password="true"
+                android:textSize="14sp"
+                android:textColor="@color/d3d3d3d"
+                android:textColorHint="@color/d9d9d9" />
+        </RelativeLayout>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -110,28 +123,18 @@
         android:layout_marginTop="50dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_weight="1.0"
-            android:background="@drawable/add_device_edit_bg"
-            android:gravity="center"
-            android:text="上一步"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FFFFFF" />
+
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginLeft="50dp"
             android:layout_weight="1.0"
-            android:background="@drawable/add_device_edit_bg"
+            android:background="@drawable/wifi_connect_edit_next_step"
             android:gravity="center"
             android:text="下一步"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#FFFFFF" />
+            android:textColor="@color/d3d3d3d" />
     </LinearLayout>
 
 
