--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/f5f5f5"
     tools:context="com.sicao.smartwine.user.FeedBackActivity">
 
     <EditText
@@ -16,6 +17,7 @@
         android:gravity="start"
         android:padding="10dp"
         android:maxLength="120"
+        android:layout_margin="10dp"
         android:textColor="#000000"
         />
 </RelativeLayout>
