--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,9 +10,8 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -20,98 +19,62 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="10dp"
-                    android:text="智能酒柜"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="#000000" />
-            </RelativeLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="#FFFFFF"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="horizontal"
                     android:padding="10dp">
 
-                    <AutoCompleteTextView
-                        android:id="@+id/email"
-                        android:layout_width="match_parent"
+                    <TextView
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@null"
-                        android:hint="@string/prompt_email"
-                        android:inputType="text|phone"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColorHint="@color/text_color_64" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@color/line_1dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp">
+                        android:text="手机号："
+                        android:textColor="@color/d3d3d3d"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/password"
+                        android:id="@+id/email"
+                        style="?android:attr/textViewStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
-                        android:hint="密        码(8到16位数字,字母,字符(至少两种))"
-                        android:imeActionId="@+id/login"
-                        android:imeActionLabel="@string/action_sign_in_short"
-                        android:imeOptions="actionUnspecified"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColorHint="@color/text_color_64" />
-
-                </android.support.design.widget.TextInputLayout>
+                        android:hint="请输入手机号"
+                        android:padding="10dp"
+                        android:inputType="number"
+                        android:textColor="@color/d3d3d3d"
+                        android:textSize="14sp" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@color/line_1dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:layout_height="1px"
+                    android:layout_marginLeft="15dp"
+                    android:background="@color/d9d9d9" />
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:layout_marginLeft="10dp"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/tv_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+
+                        android:layout_centerVertical="true"
+                        android:text="验证码："
+                        android:textColor="@color/d3d3d3d"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -120,63 +83,104 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:layout_gravity="right"
-                        android:layout_weight="1.0"
+                        android:layout_marginRight="5dp"
                         android:background="@drawable/get_code_bg"
                         android:paddingBottom="5dp"
                         android:paddingTop="5dp"
-                        android:textSize="16sp"
-                        android:layout_marginRight="5dp"
                         android:text="@string/get_code"
                         android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:textColor="#FFFFFF" />
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp" />
 
-                    <android.support.design.widget.TextInputLayout
+                    <EditText
+                        android:id="@+id/code"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
                         android:layout_toLeftOf="@id/textView6"
-                        android:padding="10dp">
-
-                        <EditText
-                            android:id="@+id/code"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3.0"
-                            android:background="@null"
-                            android:hint="验  证  码(请输入验证码)"
-                            android:imeActionId="@+id/login"
-                            android:imeActionLabel="@string/action_sign_in_short"
-                            android:imeOptions="actionUnspecified"
-                            android:maxLines="1"
-                            android:singleLine="true"
-                            android:textColorHint="@color/text_color_64" />
-                    </android.support.design.widget.TextInputLayout>
+                        android:layout_toRightOf="@id/tv_code"
+                        android:background="@null"
+                        android:hint="请输入短信验证码"
+                        android:imeActionId="@+id/login"
+                        android:imeActionLabel="@string/action_sign_in_short"
+                        android:inputType="number"
+                        android:imeOptions="actionUnspecified"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="@color/d3d3d3d"
+                        android:textColorHint="@color/text_color_64"
+                        android:textSize="14sp" />
 
 
                 </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginLeft="15dp"
+                    android:background="@color/d9d9d9" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="horizontal"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="密码："
+                        android:textColor="@color/d3d3d3d"
+                        android:textSize="14sp" />
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:hint="8—16位数字、字母或者字符"
+                        android:imeActionId="@+id/login"
+                        android:imeActionLabel="@string/action_sign_in_short"
+                        android:imeOptions="actionUnspecified"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:padding="10dp"
+                        android:singleLine="true"
+                        android:textColor="@color/d3d3d3d"
+                        android:textColorHint="@color/text_color_64"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="10dp"
+                android:padding="10dp">
 
                 <CheckBox
                     android:id="@+id/checkBox"
+                    style="@style/CustomCheckboxTheme"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/textView6"
                     android:checked="true"
+                    android:paddingLeft="10dp"
+                    android:textSize="12sp"
                     android:text="已经认真阅读并同意" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="服务与隐私协议"
+                    android:textSize="12sp"
                     android:textColor="@color/blue" />
             </LinearLayout>
 
@@ -185,9 +189,9 @@
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="16dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/login_btn_bg"
                 android:text="@string/action_register"
                 android:textColor="#FFFFFF"
