--- a/app/src/main/res/layout/activity_smart_set.xml
+++ b/app/src/main/res/layout/activity_smart_set.xml
@@ -21,6 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="酒柜名称:"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <EditText
@@ -31,6 +33,9 @@
             android:background="@null"
             android:ems="10"
             android:hint="请输入酒柜名称"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
+            android:textColorHint="@color/d9d9d9"
             android:paddingLeft="10dp" />
 
     </LinearLayout>
@@ -59,6 +64,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:text="工作模式:"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <ImageView
@@ -80,7 +87,10 @@
             android:background="@null"
             android:ems="10"
             android:focusable="false"
-            android:hint="请点击选择"
+            android:hint="红葡萄酒"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
+            android:textColorHint="@color/d9d9d9"
             android:paddingLeft="10dp" />
 
     </RelativeLayout>
@@ -109,6 +119,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:text="设置温度:"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <ImageView
@@ -130,7 +142,10 @@
             android:background="@null"
             android:ems="10"
             android:focusable="false"
-            android:hint="请点击选择"
+            android:hint="15℃"
+            android:textColor="@color/d3d3d3d"
+            android:textSize="16sp"
+            android:textColorHint="@color/d9d9d9"
             android:paddingLeft="10dp" />
 
     </RelativeLayout>
@@ -143,6 +158,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/login_btn_bg"
         android:text="保存"
+        android:textSize="18sp"
         android:layout_margin="@dimen/activity_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFFFFF" />
