--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -19,6 +19,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:padding="10dp"
+            android:layout_marginLeft="10dp"
             android:text="头像" />
 
         <TextView
@@ -56,10 +57,11 @@
             />
     </RelativeLayout>
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
 
     <RelativeLayout
         android:id="@+id/rr_name"
@@ -75,7 +77,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="昵称" />
 
         <TextView
@@ -95,10 +97,11 @@
             android:paddingRight="5dp" />
     </RelativeLayout>
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
 
     <RelativeLayout
         android:id="@+id/rr_sex_select"
@@ -114,7 +117,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="性别" />
 
         <TextView
@@ -134,10 +137,11 @@
             android:paddingRight="5dp" />
     </RelativeLayout>
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
 
     <RelativeLayout
         android:id="@+id/rr_birsty"
@@ -153,7 +157,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="生日" />
 
         <TextView
@@ -173,10 +177,11 @@
             android:paddingRight="5dp" />
     </RelativeLayout>
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
 
     <RelativeLayout
         android:id="@+id/rr_bing_phone"
@@ -192,30 +197,101 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="手机号码" />
+        <TextView
+            android:id="@+id/tv_change"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="更换"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:onClick="onClick"
+            android:background="@drawable/bg_user_change_phone_number"/>
 
         <TextView
             android:id="@+id/user_phone"
+            android:layout_toLeftOf="@+id/tv_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="10dp"
+            android:clickable="true" />
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
+    <RelativeLayout
+        android:id="@+id/tv_change_password"
+        android:background="#FFFFFF"
+        android:onClick="onClick"
+        android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="修改密码"/>
+        <ImageView
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/rihgt"/>
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF">
+
+        <TextView
+            android:id="@+id/test3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="20dp"
+            android:text="管理收货地址" />
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
             android:layout_margin="10dp"
+            android:layout_toLeftOf="@id/test3"
+            android:layout_toRightOf="@id/test3"
             android:clickable="true"
             android:drawableEnd="@drawable/rihgt"
             android:drawablePadding="5dp"
             android:drawableRight="@drawable/rihgt"
+            android:gravity="right|center_vertical"
             android:onClick="onClick"
             android:paddingLeft="10dp"
             android:paddingRight="5dp" />
     </RelativeLayout>
-
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+        android:layout_height="1px"
+        android:layout_marginLeft="15dp"
+        android:background="@color/C7C7C7"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -229,7 +305,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="个性签名" />
 
         <TextView
@@ -251,50 +327,10 @@
             android:paddingRight="5dp" />
     </RelativeLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
+
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF">
-
-        <TextView
-            android:id="@+id/test3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:padding="10dp"
-            android:text="管理收货地址" />
-
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="10dp"
-            android:layout_toLeftOf="@id/test3"
-            android:layout_toRightOf="@id/test3"
-            android:clickable="true"
-            android:drawableEnd="@drawable/rihgt"
-            android:drawablePadding="5dp"
-            android:drawableRight="@drawable/rihgt"
-            android:gravity="right|center_vertical"
-            android:onClick="onClick"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp" />
-    </RelativeLayout>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
-
-    <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF">
@@ -327,12 +363,8 @@
             android:paddingRight="5dp" />
     </RelativeLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line" />
-
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/write"
