--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,48 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/baseBackgroud"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="@color/f5f5f5"
     tools:context=".device.LoginActivity"
     tools:showIn="@layout/activity_main">
-
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="智能酒柜"
-        android:id="@+id/textView"
-        android:layout_below="@+id/imageView"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000000" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:id="@+id/linearLayout">
 
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:padding="10dp"
             android:layout_height="wrap_content">
 
 
@@ -53,90 +28,89 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="手机号码"
+                android:text="手机号："
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/d3d3d3d"
+                android:textSize="14sp"
                 android:id="@+id/textView2" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="phone"
+                android:inputType="number"
                 android:ems="10"
                 android:maxLength="11"
                 android:background="@null"
                 android:hint="请输入手机号"
                 android:id="@+id/editText"
-                android:paddingLeft="10dp"
+                android:textColorHint="@color/d9d9d9"
+                android:textSize="14sp"
+                android:typeface="normal"
+                android:textColor="@color/d3d3d3d"
+                android:padding="5dp"
                 android:layout_weight="1" />
 
         </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1px"
             android:background="@color/line_1dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="15dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:id="@+id/textView3" />
-        <LinearLayout
-            android:orientation="horizontal"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:padding="16dp"
+            android:padding="5dp"
             android:layout_height="wrap_content">
 
 
             <TextView
+                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="密       码"
+                android:text="验证码："
+                android:textColor="@color/d3d3d3d"
+                android:textSize="14sp"
+                android:layout_marginLeft="10dp"
                 android:id="@+id/password" />
 
             <EditText
+                android:layout_centerVertical="true"
+                android:padding="5dp"
+                android:layout_toRightOf="@id/password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="numberPassword"
                 android:ems="10"
                 android:background="@null"
-                android:hint="请输入密码"
+                android:hint="请输入验证码"
                 android:id="@+id/editText_pwd"
                 android:paddingLeft="10dp"
+                android:textColorHint="@color/d9d9d9"
+                android:textSize="14sp"
+                android:textColor="@color/d3d3d3d"
+                android:typeface="normal"
                 android:layout_weight="1" />
+            <TextView
+                android:id="@+id/tv_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/login_code"
+                android:layout_alignParentRight="true"
+                android:padding="10dp"
+                android:text="获取验证码"/>
 
-        </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="忘记密码"
-        android:id="@+id/textView4"
-        android:padding="16dp"
-        android:layout_below="@id/linearLayout"
-        android:textColor="@color/text_color_64"
-        android:layout_alignLeft="@+id/linearLayout"
-        android:layout_alignStart="@+id/linearLayout" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="立即注册"
-        android:id="@+id/textView5"
-        android:padding="16dp"
-        android:textColor="#e92323"
-        android:layout_below="@id/linearLayout"
-        android:layout_alignRight="@+id/linearLayout"
-        android:layout_alignEnd="@+id/linearLayout" />
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="登录"
         android:textSize="18sp"
         android:id="@+id/button"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/linearLayout"
         android:layout_centerHorizontal="true"
         android:textColor="#FFFFFF"
         android:background="@drawable/login_btn_bg"
