--- a/app/src/main/res/layout/device_list_item.xml
+++ b/app/src/main/res/layout/device_list_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -9,26 +8,61 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
-        <com.facebook.drawee.view.SimpleDraweeView
+        <ImageView
             android:id="@+id/device_icon"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_vertical"
-            fresco:placeholderImage="@drawable/ic_launcher"
-            />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
             android:layout_gravity="center_vertical"
-            android:id="@+id/textView15" />
+            android:src="@drawable/ic_cupboard"
+            android:padding="15dp"
+            android:layout_marginLeft="5dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:layout_gravity="center_vertical"
+                android:textSize="14sp"
+                android:textColor="@color/d3d3d3d"
+                android:id="@+id/textView15" />
+            <RelativeLayout
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_equipment"
+                    android:text="当前设备"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/tv_again_connect"
+                    android:textSize="14sp"
+                    android:layout_alignParentRight="true"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/ic_warnning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:text="点击重新连接"/>
+            </RelativeLayout>
+        </LinearLayout>
+
 
     </LinearLayout>
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:src="@drawable/line"
+        android:layout_height="1px"
+        android:background="@color/C7C7C7"
+        android:layout_marginLeft="15dp"
         />
 </LinearLayout>
