--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,12 @@
     <color name="color_333">#333333</color>
     <color name="photo_border_color">#f1f1f1</color>
     <color name="dcdcdc">#dcdcdc</color>
+    <color name="f2f2f2">#f2f2f2</color>
+    <color name="d3d3d3d">#3d3d3d</color>
+    <color name="b3b3b3">#b3b3b3</color>
+    <color name="d9d9d9">#d9d9d9</color>
+    <color name="f5f5f5">#f5f5f5</color>
+    <color name="n42383e">#42383e</color>
+    <color name="a19a9e">#a19a9e</color>
+    <color name="f85570">#f85570</color>
 </resources>
